syntax = "proto3";

option csharp_namespace = "Rebtel.LibraryManagement.Contracts";

package books.v1;

import "google/protobuf/timestamp.proto";

// The books service definition.
service BooksService {
  // Gets the most borrowed books within a date range
  rpc GetMostBorrowedBooks (GetMostBorrowedBooksRequest) returns (GetMostBorrowedBooksResponse);
  // Gets books commonly borrowed with a specific book
  rpc GetCommonBorrowedBooks (GetCommonBorrowedBooksRequest) returns (GetCommonBorrowedBooksResponse);
}

// Request message for getting most borrowed books
message GetMostBorrowedBooksRequest {
  // Number of books to return
  int32 count = 1;
}

// Response message containing the list of most borrowed books
message GetMostBorrowedBooksResponse {
  // List of most borrowed books
  repeated BookDto books = 1;
}

// Request message for getting common borrowed books
message GetCommonBorrowedBooksRequest {
  // ID of the reference book
  string book_id = 1;
  // Number of related books to return
  int32 count = 2;
}

// Response message containing the list of common borrowed books
message GetCommonBorrowedBooksResponse {
  // List of commonly borrowed books
  repeated BookDto books = 1;
}

// Book data transfer object
message BookDto {
  // Unique identifier for the book
  string id = 1;
  // Title of the book
  string title = 2;
  // Author of the book
  string author = 3;
  // ISBN number
  string isbn = 4;
  // Number of pages in the book
  int32 page_count = 5;
  // Date when the book was published
  google.protobuf.Timestamp published_date = 6;
  // Number of available copies
  int32 copies_available = 7;
}